complete till quality section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <main class="row">
 
+
+        <!-- start of header section -->
+
+
         <section class="row header">
 
             <div class="row top">
@@ -114,33 +118,37 @@
                 <img src="img/shape-2.png" alt="">
             </div>
             <div class="row Agallery">
-                <figure>
-                    <!-- <img src="img/featured-1.jpg" alt=""> -->
-                    <figcaption>Best Quality
-                        Standards</figcaption>
-                </figure>
-                <figure>
-                    <!-- <img src="img/featured-2.jpg" alt=""> -->
-                    <figcaption>Smart & Unique Wall Work</figcaption>
-                </figure>
-                <div class="row timing">
-                    <!-- <img src="img/free-estimate-box-bg.jpg" alt=""> -->
-                    <div>
-                        <i class="bi bi-clock"></i>
-                        <h6>Timings</h6>
+                <div>
+                    <figure>
+                        <img src="img/featured-1.jpg" alt="">
+                        <figcaption>Best Quality
+                            Standards</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/featured-2.jpg" alt="">
+                        <figcaption>Smart & Unique Wall Work</figcaption>
+                    </figure>
+                    <div class="row timing">
+                        <img src="img/free-estimate-box-bg.jpg" alt="">
                         <div>
-                            <p>Mon</p>
-                            <p>9:00am - 6:00pm</p>
+                            <i class="bi bi-clock"></i>
+                            <div>
+                                <h6>Timings</h6>
+                                <div>
+                                    <p>Mon</p>
+                                    <p>9:00am - 6:00pm</p>
+                                </div>
+                                <div>
+                                    <p>Fri to Sat</p>
+                                    <p>10:00am - 4:00pm</p>
+                                </div>
+                                <div>
+                                    <p>Sun</p>
+                                    <p>Work Holiday</p>
+                                </div>
+                                <a href="">Get A Free Estimate</a>
+                            </div>
                         </div>
-                        <div>
-                            <p>Fri to Sat</p>
-                            <p>10:00am - 4:00pm</p>
-                        </div>
-                        <div>
-                            <p>Sun</p>
-                            <p>Work Holiday</p>
-                        </div>
-                        <a href="">Get A Free Estimate</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +160,41 @@
 
 
         <section class="row quality">
+            <div class="row background"></div>
+            <div>
+                <p>Best Interior Design</p>
+                <h3>Quality Work That Meets
+                    Your Expectations</h3>
+                <div>
+                    <div>
+                        <a href="">Quality Material</a>
+                    </div>
+                    <div>
+                        <a href="">Expert Team</a>
+                    </div>
+                    <div>
+                        <a href="">Smart Work</a>
+                    </div>
+                </div>
+                <figure>
+                    <img src="img/material-1.png" alt="">
+                    <figcaption>There are many variations of passages of available but the majority have suffered alteration in some form, or randomised words which don look even slightly believable.</figcaption>
+                </figure>
+            </div>
 
+            <div>
+                <div>
+                    <i class="bi bi-palette"></i>
+                    <h5>Innovative Wall Designs</h5>
+                    <p>There are many variations of passages of available but the majority have simply free text suffered.</p>
+                </div>
+                <p></p>
+                <div>
+                    <i class="bi bi-bricks"></i>
+                    <h5>High Quality Wall Matterial</h5>
+                    <p>There are many variations of passages of available but the majority have simply free text suffered.</p>
+                </div>
+            </div>
         </section>
 
 
