--- a/index.html
+++ b/index.html
@@ -202,7 +202,54 @@
 
 
         <section class="row project">
-
+            <h3>Our Recent Projects</h3>
+            <div>
+                <figure>
+                    <img src="img/project-v1-1.jpg" alt="">
+                    <figcaption></figcaption> 
+                    <p>Washroom Wall Design
+                        <a href="">
+                            <i class="bi bi-arrow-down"></i>
+                        </a>
+                    </p>
+                </figure>
+                <figure>
+                    <img src="img/project-v1-2.jpg" alt="">
+                    <figcaption></figcaption> 
+                    <p>Washroom Wall Design
+                        <a href="">
+                            <i class="bi bi-arrow-down"></i>
+                        </a>
+                    </p>
+                </figure>
+                <figure>
+                    <img src="img/project-v1-3.jpg" alt="">
+                    <figcaption></figcaption> 
+                    <p>Washroom Wall Design
+                        <a href="">
+                            <i class="bi bi-arrow-down"></i>
+                        </a>
+                    </p>
+                </figure>
+                <figure>
+                    <img src="img/project-v1-4.jpg" alt="">
+                    <figcaption></figcaption> 
+                    <p>Washroom Wall Design
+                        <a href="">
+                            <i class="bi bi-arrow-down"></i>
+                        </a>
+                    </p>
+                </figure>
+                <figure>
+                    <img src="img/project-v1-5.jpg" alt="">
+                    <figcaption></figcaption> 
+                    <p>Washroom Wall Design
+                        <a href="">
+                            <i class="bi bi-arrow-down"></i>
+                        </a>
+                    </p>
+                </figure>
+            </div>
         </section>
         
 
