--- a/index.html
+++ b/index.html
@@ -74,12 +74,29 @@
 
             <div class="row article">
                 <div>
-                    <h6>Welcome to Interior Wallapering & Painting</h6>
-                    <h1>the best quality wallpapers for your home</h1>
-                    <a href="">Discover More</a>
+                    <div>
+                        <h6>Welcome to Interior Wallapering & Painting</h6>
+                        <h1>the best quality wallpapers for your home</h1>
+                        <a href="">Discover More</a>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h6>Welcome to Interior Wallapering & Painting</h6>
+                        <h1>the best quality wallpapers for your home</h1>
+                        <a href="">Discover More</a>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h6>Welcome to Interior Wallapering & Painting</h6>
+                        <h1>the best quality wallpapers for your home</h1>
+                        <a href="">
+                            <p>Discover More</p>
+                        </a>
+                    </div>
                 </div>
             </div>
-
         </section>
 
 
@@ -305,7 +322,9 @@
                     </div>
                 </div>
                 <p>Lorem ipsum dolor sit amet nsectetur cing ndisse suscipit sagitis leo sit.</p>
-                <a href="">Get A Free Estimate</a>
+                <a href="">
+                    <p>Get A Free Estimate</p>
+                </a>
             </div>
         </section>
         
@@ -397,7 +416,9 @@
                 <h4>We Pay Attention to Every
                     Detail to Make your Room
                     Wall Stunning</h4>
-                    <a href="">Discover More</a>
+                    <a href="">
+                        <p>Discover More</p>
+                    </a>
             </div>
             <div>
                 <img src="img/discover-1.jpg" alt="">
